tests/valid/test_fun_15.wyal
function f(int x) -> (int r)

assert:
    forall(int x):
        if:
            x == f(x)
        then:
            x == f(f(x))