tests/invalid/test_073.wyal
function f(int&!int x) -> (int r)

